# gwangjin-jikimi

./: README.md  poetry.toml  pyproject.toml
data/metro/: gwangjin_metro.csv
data/parking/: grids_with_parking.parquet  parking_and_station.csv  광진구시설관리공단_공영주차장 현황_20240315.csv
data/shp/: 100m_grids.parquet  100m격자.dbf  100m격자.qmd  100m격자.shp
gwangjin/: accessibility.py  demand.py  utils.py  viz.py
notebooks/: 4.1 수요-아동인구.ipynb  4.1 수요-키즈카페.ipynb  4.2 접근성.ipynb  4.3 안전성.ipynb
